--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <html>
   <body>
-    <h1>Sumador</h1>
+    <h1>Contador de ocurrencias</h1>
     <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+      <label for="palabra">Ingrese una palabra:</label>
+      <input type="text" id="palabra" />
+      <input type="submit" value="Ingresar" id="sumar-button" />
     </form>
     <div id="resultado-div"></div>
 
